fix: update contact overlay styles for improved layout and spacing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -29,7 +29,7 @@ body {
 }
 
 .login__title {
-  margin: 0px auto 0px auto;
+  margin: 28px auto 0px auto;
   font-size: 60px;
   font-weight: 700;
 }
