--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,8 +1,3 @@
-.contact_item {
-    list-style: none;
-    margin-bottom: 8px;
-}
-
 .contact_container {
     display: flex;
     align-items: center;
@@ -52,47 +47,6 @@
     color: #007CEE;
 }
 
-
-
-
-
-.buttons_add_contact {
-    display: flex;
-    justify-content: flex-end;
-    gap: 20px;
-    margin-top: 20px;
-    padding-right: 80px;
-
-    margin-bottom: 100px;
-}
-
-.btn_save_contact {
-    background-color: #ffffff;
-    border: 1px solid #2A3647;
-    border-radius: 8px;
-    height: 40px;
-    width: 100px;
-    font-size: 16px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn_cancel_contact {
-    background-color: #2A3647;
-    color: #ffffff;
-    border: none;
-    border-radius: 8px;
-    height: 40px;
-    width: auto;
-    font-size: 16px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .btn_cancel_contact img {
     height: 10px;
     margin: unset;
@@ -129,7 +83,7 @@
 }
 
 .close_overlay_icon {
-    margin-right: 32px!important;
+    margin-right: 32px !important;
     cursor: pointer;
     width: 16px;
     height: 16px;
@@ -278,6 +232,7 @@
     list-style: none;
     cursor: pointer;
     padding: 2px 0;
+    margin-bottom: 8px;
 
 }
 
@@ -378,17 +333,14 @@
 .overlay_add_contact_right form {
     display: flex;
     flex-direction: column;
-    padding: 0px 25px 0px 0px;
-    gap: 15px;
+    padding: 0px 25px 20px 0px;
+    gap: 28px;
     width: 63%;
     border-radius: 16px;
 }
 
-.overlay_add_contact form input.input_add_contact {
-    height: 40px;
-    border: 1px solid #cccccc;
-    border-radius: 8px;
-    font-size: 16px;
+.overlay_avatar{
+    margin-top: 58px!important;
 }
 
 .addContact_form_container {
@@ -438,12 +390,13 @@
     box-shadow: 0 0 0 1px #29abe2;
 }
 
-
-
 .buttons_add_contact {
     margin-top: 14px;
     display: flex;
     gap: 12px;
+    margin-bottom: 100px;
+    padding-right: 80px;
+    justify-content: flex-end;
 }
 
 .btn_save_contact,
@@ -453,6 +406,11 @@
     padding: 0 20px;
     border: 1px solid #2a3647;
     cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
 }
 
 .btn_save_contact {
